--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Helen's Portfolio</title>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="nav">
+        <h1 class="my-name">Helen Tariku</h1>
+        <ul>
+          <li href="#about-me">About Me</li>
+          <li href="#my-work">My Work</li>
+          <li href="#contact-me">Contact Me</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
