images,css,and about me updated

--- a/index.html
+++ b/index.html
@@ -18,5 +18,57 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      
+        <article 
+        class="about-me">
+          <img src="./assets/images/me.jpeg" alt="A picture of me in my backyard"/>
+          <div id="about-me">
+          <h2>
+            About Me 
+          </h2>
+          <p>
+            My Name is Helen Tariku, I am 23 years old and a recent grad from Virginia Commonwelath University. I am currently working at Virginia Hospital Center as a certified Medical Labratory Technologist in their Microbiolog, Hematology, and Chemistry department. I basically analyze and run tests for various specimens and body fluids to see if there are any abnormalitie. Alongside that, I also run covid PCR testing with te newly emerged and ongoing pandemic taking place right now. 
+            <br/>
+            During my time as a Lab tech I have found a great intrest in instrumentation and grew more curious of the roles that our enigenears and information technologists played. I have enrolled in George Washington Coding Bootcamp to expand my learning, espicially as the world of technology is constantly growing (even in healthcare). With my new found skill I hope to contrubute my creativity and ideas to the feild and craft my skills overtime. 
+          </p>
+        </div>
+        </article>
+
+        <div id="my-work">
+          <h2> 
+            My Work 
+          </h2>
+          <p>
+            Run-Buddy 
+            https://htariku.github.io/run-buddy/
+          </p>
+        </div>
+
+        <div id="contact-me" class="contact-me">
+          <h2> 
+            Contact Me 
+          </h2>
+          <p>Fill out this form and one to Reach Me</p>
+    <form>
+    <label for="name">Enter full name:</label>
+    <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
+    <label for="email">Enter email address:</label>
+    <input type="text" placeholder="Email Address" name="email" id="email" class="form-input">
+    <label for="phone">Enter a telephone number:</label>
+    <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input">
+  
+    <footer>
+      <h2>
+       Contact Information
+      </h2>
+        <ul>
+          <li>Email: hgtariku@yahoo.com </li>
+          <li>Phone: 571-306-9151</li>
+        </ul>
+    </footer>
+        </div>
+    </main>
   </body>
 </html>
