--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
               alt="project Team Profile Generator"></a>
           </p>
         </li>
+        <li>
+          <p>
+           Internatinal GlobeTrotters
+          </br>
+          <a href='https://app-inter-globetrotters.herokuapp.com/'><img class="team-photo" src="./assets/images/Inter-globetrotter.png"
+              alt="Inter-globetrotters"></a>
+          </p>
+        </li>
       
       </ul>
     </div>
